app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
    body {
        font-size: 1.125rem;
    }
}

@layer components {
    .blog-content p {
        @apply py-4;
    }

    .blog-content h2 {
        @apply text-lg md:text-2xl md:my-3;
    }

    .blog-content ol {
        @apply list-decimal;
    }

    .blog-content ul {
        @apply list-disc list-inside;
    }

    .blog-list-divider {
        @apply relative after:content-[''] after:block after:absolute after:bg-gray-200 after:bottom-[-20px] after:h-[1px] after:w-full;
    }
}

@layer utilities {
    /* SIZING */

    /* HEADINGS 3 AND BODY SIZE */
    .heading-content {
        @apply text-[1.5rem] md:text-[2.5rem];
    }

    .sub-heading-content {
        @apply text-[1.5rem];
    }

    .body-content {
        @apply text-[1.125rem];
    }

    /* LIST */
    .list-heading-content {
        @apply text-base md:text-[1.2rem];
    }

    .list-body-content {
        @apply text-[1.125rem];
    }

    /* button token  */
    .dashed-circle {
        position: fixed;
        bottom: 2rem;
        right: 2rem;
        display: flex;
        justify-content: center;
        align-items: center;
        width: 100px;
        height: 100px;
        border: 10px solid white;
        border-radius: 50%;
        font-family: Helvetica, Arial, sans-serif;
        color: white;
        font-size: 20px;
        font-weight: bold;
        text-align: center;
        background: radial-gradient(circle, #0070f3 0%, #ffffff 30%, #0070f3 60%);
        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.4);
        cursor: pointer;
        transition: transform 0.2s ease-in-out;
        z-index: 1000;
    }

    .dashed-circle:hover {
        transform: scale(1.1);
        box-shadow: 0 6px 10px rgba(0, 0, 0, 0.6);
    }

    .dashed-circle.spinning {
        animation:
            spin 1s linear infinite,
            fadeOut 0.5s ease-out forwards;
    }

    .dashed-circle:before {
        position: absolute;
        z-index: -1;
        top: -12px;
        right: -12px;
        bottom: -12px;
        left: -12px;
        border: 3px dashed white;
        border-radius: 50%;
        content: '';
    }

    .dashed-circle:after {
        position: absolute;
        z-index: -2;
        top: 12px;
        right: 12px;
        bottom: 12px;
        left: 12px;
        border: 3px dashed white;
        border-radius: 50%;
        content: '';
    }

    @keyframes spin {
        from {
            transform: rotate(0deg);
        }
        to {
            transform: rotate(360deg);
        }
    }

    @keyframes fadeOut {
        from {
            opacity: 1;
        }
        to {
            opacity: 0;
        }
    }
}

